--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@mdi/font": "^7.2.96",
     "@tinymce/tinymce-vue": "^5.1.0",
     "@vitejs/plugin-vue": "^4.2.3",
+    "pinia": "^2.1.6",
     "tinymce": "^6.5.1",
     "vite-plugin-fonts": "^0.7.0",
     "vite-plugin-vuetify": "^1.0.2",
