--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tinymce/tinymce-vue": "^5.1.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "pinia": "^2.1.6",
+    "pinia-plugin-persistedstate": "^3.2.0",
     "tinymce": "^6.5.1",
     "vite-plugin-fonts": "^0.7.0",
     "vite-plugin-vuetify": "^1.0.2",
