--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "build": "vite build"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.2",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
     "axios": "^1.1.2",
