--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@mdi/font": "^7.2.96",
     "@tinymce/tinymce-vue": "^5.1.0",
     "@vitejs/plugin-vue": "^4.2.3",
+    "@vuepic/vue-datepicker": "^6.1.0",
     "pinia": "^2.1.6",
     "pinia-plugin-persistedstate": "^3.2.0",
     "tinymce": "^6.5.1",
