--- a/.env.example
+++ b/.env.example
@@ -2,12 +2,17 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:C4rmTffC9vRlxUurUjK3N8CR19aBLJpVB+OvVk4QCb4=
 APP_DEBUG=true
+# overwrite
 APP_URL=http://localhost
+# overwrite
+VITE_API_BASE_URL=http://localhost
 
+# overwrite
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+# overwrite
 DB_CONNECTION=mysql
 DB_HOST=mariadb-my-goal
 DB_PORT=3306
@@ -56,3 +61,12 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+# ---------------------------
+# for docdker-compose
+# ---------------------------
+PROJECT_NAME=my-goal
+APP_PORT=5173
+NGINX_PORT=80
+DB_PORT=3306
+PUBLIC_FOLDER=/var/www
