--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,34 +3,35 @@ version: '3'
 services:
   app:
     image: codershisho/php
-    container_name: app-my-goal
+    container_name: app-${PROJECT_NAME}
     tty: true
     volumes:
-      - .:/var/www/
+      - .:${PUBLIC_FOLDER}
     ports:
-      - 5173:5173
+      - ${APP_PORT}:5173
 
   nginx:
     image: codershisho/nginx
-    container_name: nginx-my-goal
+    container_name: nginx-${PROJECT_NAME}
     tty: true
     ports:
-      - 80:80
+      - ${NGINX_PORT}:80
     volumes:
-      - .:/var/www
+      - .:${PUBLIC_FOLDER}
       - ./conf.d:/etc/nginx/conf.d
     depends_on:
       - app
 
   db:
     image: mariadb:10.9
-    container_name: mariadb-my-goal
+    container_name: mariadb-${PROJECT_NAME}
     volumes:
       - ./db_data:/var/lib/mysql
     ports:
-      - '3306:3306'
+      - ${DB_PORT}:3306
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: root
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+      MYSQL_DATABASE: ${DB_DATABASE}
 volumes:
   db_data:
