--- a/.env.example
+++ b/.env.example
@@ -48,13 +48,11 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
-PUSHER_HOST=
-PUSHER_PORT=443
-PUSHER_SCHEME=https
-PUSHER_APP_CLUSTER=mt1
+BROADCAST_DRIVER=pusher
+PUSHER_APP_ID=1679788
+PUSHER_APP_KEY=6c038027eda3a2e7beec
+PUSHER_APP_SECRET=270ba7c1a9d10d130319
+PUSHER_APP_CLUSTER=ap3
 
 VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 VITE_PUSHER_HOST="${PUSHER_HOST}"
@@ -70,3 +68,4 @@ APP_PORT=5173
 NGINX_PORT=80
 DB_PORT=3306
 PUBLIC_FOLDER=/var/www
+TIME_ZONE=Asia/Tokyo
